--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
+app.search-db.protocol=http
+app.search-db.host=localhost
+app.search-db.port=8108
 
+spring.datasource.url=jdbc:mysql://root:mysqlpw@localhost:49154/userservice?createDatabaseIfNotExist=true
+spring.datasource.username=root
+spring.datasource.password=password
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.properties.hibernate.format_sql=true
